fixed issue of floating footer on smaller screen size

--- a/style/index.css
+++ b/style/index.css
@@ -20,7 +20,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -43,56 +43,75 @@ table {
 	border-spacing: 0;
 }
 
+
+
 /* Styles start here */
+
+/* Entire Page Stylings */
+
 *{
-    box-sizing: border-box;
     max-width: 100%;
     max-height: 100%;
+    padding: 0;
+    margin: 0;
     color: #d1e0e0;
+    box-sizing: border-box;
 }
 
 html {
     font-size: 62.5%;
+    height: 200vh;
 }
 
 body {
     text-align: center;
     font-family: 'Zen Loop', monospace;
     background-color: #141f1f;
-    font-size: 1.8rem;
+    font-size: 1.8rem; 
 }
 
+.all_content, nav, .gallery, .shoe, .socials {
+    display: flex;
+}
+
+.all_content {
+    flex-direction: column; 
+    height: max-content;
+    width: 100%;
+}
+
+/* Header */
+
 header {
-    margin: 1% 0;
+    margin: 3% 0;
 }
 
 h1 {
     text-transform: uppercase;
-    text-shadow: 3px 3px #334d4d;
-    letter-spacing: 15px;
-    word-spacing: 20px;
+    text-shadow: .3rem .3rem #334d4d;
+    letter-spacing: 1.5rem;
+    word-spacing: 2rem;
     font-size: 3.5rem;
 }
 
-nav, .gallery {
-    display: flex;
-}
+
 
 nav{
+    margin: 2% 0;
     padding: 1%;
     justify-content: center;
 }
 
 a {
     text-decoration: none;
-    padding: 0 1%;
+    padding: 1%;
     font-size: 3rem;
     align-self: center;
 }
 
 .navbuttons, #email {
     align-items: center;
-    letter-spacing: 2px;
+    letter-spacing: .4rem;
     border: 1px solid #d1e0e0;
     
 }
@@ -104,9 +123,7 @@ a {
     text-shadow: 1px 1px #141f1f;
 }
 
-main {
-    border: 2px dashed pink;
-}
+/* Main Content */
 
 .intro {
     padding: 0 2% 4% 2%;
@@ -115,15 +132,15 @@ main {
 h2 {
     font-family: 'Fuggles', cursive;
     font-size: 4rem;
-    word-spacing: 5px;
-    text-shadow: 2px 2px #334d4d;
+    word-spacing: 1rem;
+    text-shadow: .2rem .2rem #334d4d;
     border: 1px #d1e0e0;
     border-style: none none solid none;
 }
 
 .intro p {
-    letter-spacing: 3px;
-    word-spacing: 5px;
+    letter-spacing: .3rem;
+    word-spacing: .5rem;
     font-size: 2rem;
     padding: 4% 0 0 0;
 }
@@ -165,23 +182,38 @@ h2 {
 
 .gallery_comment {
     align-self: center;
-    padding: 1rem;
+    padding: 0 3%;
+    width: 100%;
 }
 
 .gallery_comment p {
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
+
+/* Footer */ 
 
 footer {
     border-top: 1px solid #d1e0e0;
-    padding: 2% 0 0 0;
+    padding: 2% 0;
+    height: 15vh;
+    width: 100%;
+}
+
+.shoe {
+    flex-direction: column;
+    justify-content: space-between;
+    height: inherit;
 }
 
 .socials {
-    display: flex;
     justify-content: flex-end;
 }
 
+.socials p {
+    font-size: 2rem;
+}
+
+/* Media Queries */
 
 @media (max-width: 800px) {
     #main_photo {
@@ -191,11 +223,27 @@ footer {
     .gallery {
         flex-wrap: wrap;
         justify-content: center;
+        height: 120vh;
     }
 
     .gallery img {
         width: 50%;
-        
+        height: 50vh;
+    }
+
+    .gallery_comment {
+        padding: 7% 4%;
+        height: 20vh;
+    }  
+    
+    .shoe {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .socials {
+        align-items: center;
     }
 }
 
@@ -215,9 +263,26 @@ footer {
 
     a {
         font-size: 2.5rem;
+        padding: 1%;
     }
 
     #main_photo {
         height: 40vh; 
+    }
+
+    .gallery {
+        height: 115vh;
+    }
+
+    .gallery img {
+        height: 50vh;
+    }
+
+    .gallery_comment {
+        height: 15vh;
+    }
+
+    .gallery_comment p {
+        font-size: 2rem;
     }
 }
